kubernetes/apps/default/immich/securitypolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: immich-auth
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: immich
  extAuth:
    headersToExtAuth:
    - cookie
    - x-forwarded-host
    - x-forwarded-proto
    http:
      backendRef:
        name: ak-outpost-authentik-embedded-outpost
        namespace: default
        port: 9000
      path: /outpost.goauthentik.io/auth/envoy
      headersToBackend:
      - x-authentik-username
      - x-authentik-groups
      - x-authentik-email
      - x-authentik-uid
      - set-cookie
